package MeterReader;

message CounterUpdate {
    required int32 meterId = 1;
	required uint32 seriesId = 2;
	required uint64 currentCounterValue = 3;
}